# nanobot

./: .gitignore  ARCHITECTURE.md  BLUEPRINT.md  README.md  ROADMAP.md  core_agent_lines.sh  cube-implementaion.md  manifest  pyproject.toml  wren-implementaion.md
.claude/memory/: MEMORY.md  blueprint_priorities.md  modular_arch.md  no_api_auth.md  no_prometheus.md  observability_arch.md  pydantic_ai.md
.github/workflows/: docker-release.yaml
nanobot/: nanobot.py
nanobot/channels/: manager.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/providers/: __init__.py  fallback.py  openai_provider.py  registry.py
src/nanobot/: _identity.py  alembic.ini  context.py  db.py  nanobot.py  observability.py  runner.py  skill_loader.py  subagent.py
src/nanobot/agent/: __init__.py  _identity.py  agent.py  context.py  memory.py  runner.py  skills.py  subagent.py
src/nanobot/agents/: __init__.py  deps.py  extractor.py  helpers.py  summarizer.py  talker.py
src/nanobot/bus/: events.py  queue.py
src/nanobot/channels/: base.py  discord.py  manager.py  slack.py  telegram.py  transcription.py
src/nanobot/cli/: commands.py  onboard.py  stream.py
src/nanobot/command/: builtin.py  router.py
src/nanobot/config/: __init__.py  loader.py  paths.py  provider_spec.py  schema.py
src/nanobot/cron/: service.py  types.py
src/nanobot/cube/: __init__.py  embedding_function.py  query_memory.py  schema_index.py  service.py
src/nanobot/heartbeat/: service.py
tests/: conftest.py  test_db.py  test_nanobot_facade.py  test_observability.py
tests/agent/: test_compact_command.py  test_context_prompt_cache.py  test_gemini_thought_signature.py  test_heartbeat_service.py  test_mem0.py  test_memory.py  test_memory_testmodel.py  test_nanobot_agent.py  test_onboard_logic.py  test_runner.py  test_session_manager.py  test_skill_creator_scripts.py  test_skills_loader.py  test_subagent.py
tests/channels/: test_channel_plugins.py
tests/cli/: test_commands.py
tests/config/: test_config_schema.py  test_provider_spec.py
tests/cron/: test_cron_tool_list.py
tests/cube/: conftest.py  test_query_memory.py  test_schema_index.py  test_service.py  test_sql_memory.py
tests/providers/: test_cached_tokens.py  test_providers_init.py  test_reasoning_content.py
tests/tools/: test_cube_tool.py  test_exec_security.py  test_filesystem_tools.py  test_mcp_tool.py  test_message_tool.py  test_tool_validation.py  test_web_fetch_security.py  test_web_search_tool.py
(+36 files in other folders)
